# python_magnetgmsh

./: .dockerignore  .gitignore  Dockerfile  Installation.md  LICENSE  README.md  Testsuite.md  archive.sh  logging_migration_prompt.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  singularity.def  singulartiy.def  start-venv.sh  testsuite-xao.sh  testsuite.sh  testsuite2D.sh
.devcontainer/: Dockerfile  Dockerfile~  devcontainer.json  devcontainer.json~
debian/: control  copyright  rules  watch
python_magnetgmsh/: Air.py  Bitter.py  Bitter2D.py  Bitter2Dquarter.py  Bitters.py  Helix.py  Insert.py  MSite.py  MeshAxiData.py  MeshData.py  Ring.py  Screen.py  Supra.py  SupraStructure.py  Supras.py  TODO.md  __init__.py  argparse_utils.py  bcs.py  cfg.py  cli.py  deserialize.py  helix3D.py  logging_config.py  rotate.py  utils.py  volumes.py  xao.py  xao2msh.py
python_magnetgmsh/axi/: Air.py  Bitter.py  Bitters.py  Helix.py  Insert.py  MSite.py  MeshAxiData.py  Ring.py  Screen.py  Supra.py  SupraStructure.py  Supras.py
python_magnetgmsh/m2d/: Bitter2D.py  Bitter2Dquarter.py
python_magnetgmsh/m3d/: MeshData.py  helix.py  insert.py  ring.py
python_magnetgmsh/mesh/: axi.py  bcs.py  groups.py  m3d.py
python_magnetgmsh/utils/: files.py  lists.py  merge2Dmeshes.py
