[tool.poetry]
name = "python_magnetgmsh"
version = "0.1.0"
description = "Python helpers to create HiFiMagnet cads and meshes with Gmsh"
authors = ["Christophe Trophime <christophe.trophime@lncmi.cnrs.fr>",
           "Romain Vallet <romain.vallet@lncmi.cnrs.fr>",
           "Jeremie Muzet <jeremie.muzet@lncmi.cnrs.fr>"
          ]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6"
gmsh = "^4.13.1"
python_magnetgeo = "^0.7.0"
numpy = "^1.24.0"
xmltodict = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
